Bootstrap import, styles revision

--- a/_includes/layouts/advice.njk
+++ b/_includes/layouts/advice.njk
@@ -19,7 +19,7 @@
       <div class="advice__type">
         <div class="advice__heading">
           <h3>Oblékání</h3>
-          <img class="advice__icon" src="/images/clothing.svg" alt="">
+          <img class="icon advice__icon" src="/images/clothing.svg" alt="">
         </div>
         <ul>
           <li>do školky je nejjednodušší tričko a tepláčky</li>
@@ -30,7 +30,7 @@
       <div class="advice__type">
         <div class="advice__heading">
           <h3>Obouvání</h3>
-          <img class="advice__icon" src="/images/shoe.svg" alt="">
+          <img class="icon advice__icon" src="/images/shoe.svg" alt="">
         </div>
         <ul>
           <li>dovnitř pevné bačkorky, ne pantofle nebo boty s přezkou</li>
@@ -40,7 +40,7 @@
       <div class="advice__type">
         <div class="advice__heading">
           <h3>Jídlo</h3>
-          <img class="advice__icon" src="/images/food.svg" alt="">
+          <img class="icon advice__icon" src="/images/food.svg" alt="">
         </div>
         <ul>
           <li>naučte dítě jíst lžící, starší děti příborem</li>
@@ -52,7 +52,7 @@
       <div class="advice__type">
         <div class="advice__heading">
           <h3>Hygiena</h3>
-          <img class="advice__icon" src="/images/hygiene.svg" alt="">
+          <img class="icon advice__icon" src="/images/hygiene.svg" alt="">
         </div>
         <ul>
           <li>ujistěte dítě, aby se nebálo říci učitelce, že potřebuje na WC, paní učitelky mu samozřejmě s hygienou pomohou</li>
