--- a/_includes/layouts/clothing.njk
+++ b/_includes/layouts/clothing.njk
@@ -9,7 +9,7 @@
       <div class="clothing__type">
         <div class="clothing__heading">
           <h3>Dovnitř</h3>
-          <img class="clothing__icon" src="/images/inside.svg" alt="">
+          <img class="icon clothing__icon" src="/images/inside.svg" alt="">
         </div>
         <ul>
           <li>tričko</li>
@@ -20,7 +20,7 @@
       <div class="clothing__type">
         <div class="clothing__heading">
           <h3>Na ven</h3>
-          <img class="clothing__icon" src="/images/outside.svg" alt="">
+          <img class="icon clothing__icon" src="/images/outside.svg" alt="">
         </div>
         <ul>
           <li>tepláková souprava</li>
@@ -30,8 +30,8 @@
       </div>
       <div class="clothing__type">
         <div class="clothing__heading">
-          <h3>Náhradní oblečení (v pytli v šatně)</h3>
-          <img class="clothing__icon" src="/images/locker.svg" alt="">
+          <h3>Náhradní oblečení (v šatně)</h3>
+          <img class="icon clothing__icon" src="/images/locker.svg" alt="">
         </div>
         <ul>
           <li>spodní prádlo</li>
