--- a/_includes/layouts/concept.njk
+++ b/_includes/layouts/concept.njk
@@ -14,7 +14,7 @@
     <p>Pro předškolní děti máme speciální program, např. uvolňovací cviky (grafomotorické cviky), práce s knihou „Než půjdeš do školy“. V rámci spolupráce se ZŠ Veronské náměstí navštěvujeme děti v prvních třídách, účastníme se vánočních akcí, recitačních soutěží, navštěvujeme školní družinu a vzájemně se informujeme o dětech.</p>
     <p>Spolupracujeme s Lidovou školou umění.</p>
     <p>Dále běžným způsobem spolupracujeme s Obvodní pedagogicko-psychologickou poradnou pro Prahu 10.</p>
-    <h2>Diagnostická péče:</h2>
+    <h2>Diagnostická péče</h2>
     <ul>
       <li>děti přecitlivělé až úzkostlivé</li>
       <li>děti s odkladem školní docházky</li>
