--- a/_includes/layouts/day-mode.njk
+++ b/_includes/layouts/day-mode.njk
@@ -7,7 +7,7 @@
     <h1>Režim dne</h1>
     <section class="day-mode__section">
       <h2>Předškoláci (5 - 7 let)</h2>
-      <table class="day-mode__table">
+      <table class="table table-sm table-borderless day-mode__table">
         <tr>
           <th scope="row">6.30 – 8.30</th>
           <td>společenské hry, individuální práce s dětmi, stimulační aktivity, cvičení smyslů, výtvarné a pracovní činnosti</td>
@@ -76,7 +76,7 @@
 
     <section class="day-mode__section">
       <h2>Děti prostřední (4 roky)</h2>
-      <table class="day-mode__table">
+      <table class="table table-sm table-borderless day-mode__table">
         <tr>
           <th scope="row">6.30 – 8.30</th>
           <td>hravé činnosti, cvičení motoriky, rozvoj činnosti, rozvoj sociálních vztahů, poznávání světa, nácvik sebeobsluhy</td>
@@ -130,7 +130,7 @@
       <h2>Děti nejmladší (3 roky)</h2>
       <p>snížený počet dětí ve třídě (zapsáno 20 dětí)</p>
       <p>adaptační program – možnost domluvy s paní učitelkou ohledně kratší doby, kterou dítě v mateřské škole stráví</p>
-      <table class="day-mode__table">
+      <table class="table table-sm table-borderless day-mode__table">
         <tr>
           <th scope="row">8.00 – 8.45</th>
           <td>individuální hry, dechová a artikulační cvičení</td>
