--- a/_includes/layouts/documents.njk
+++ b/_includes/layouts/documents.njk
@@ -27,23 +27,23 @@
         </li>
         <li>
           <span class="documents__info--list-heading">Kontaktní spojení</span>
-          <p>Mateřská škola, Praha 10, Parmská 388 <br />
+          <address>Mateřská škola, Praha 10, Parmská 388 <br />
             Parmská 388 <br />
-            109 00 Praha 10 </p>
+            109 00 Praha 10 </address>
           <p>Tel.: 274865950</p>
           <p>E-mail: msparmska@seznam.cz</p>
           <ol>
             <li>
               <span class="documents__info--list-heading">Kontaktní poštovní adresa</span>
-              <p>Mateřská škola, Praha 10, Parmská 388 <br />
+              <address>Mateřská škola, Praha 10, Parmská 388 <br />
                 Parmská 388 <br />
-                109 00 Praha 10 </p>
+                109 00 Praha 10 </address>
             </li>
             <li>
               <span class="documents__info--list-heading">Adresa pro osobní návštěvu</span>
-              <p>Mateřská škola, Praha 10, Parmská 388 <br />
+              <address>Mateřská škola, Praha 10, Parmská 388 <br />
                 Parmská 388 <br />
-                109 00 Praha 10 </p>
+                109 00 Praha 10 </address>
             </li>
             <li>
               <span class="documents__info--list-heading">Úřední hodiny</span>
@@ -88,16 +88,18 @@
         <li>
           <span class="documents__info--list-heading">Žádosti o informace</span>
           <p>Získat informace, podávat žádosti, stížnosti, návrhy, podněty atd., lze písemně nebo elektronicky skrz datovou schránku.</p>
-          <p>Přehled žádostí za rok 2020</p>
-          <table>
-            <tr>
-              <td>1.</td>
-              <td><a href="/docs/zadost-o-poskytnuti-informaci-kamerovy-system.pdf" target="_blank">Žádost o poskytnutí informací ke kamerovému systému</a></td>
-            </tr>
-            <tr>
-              <td></td>
-              <td></td>
-            </tr>
+          <table class="table table-sm table-bordered">
+            <thead class="thead-light">
+              <tr>
+                <th scope="colgroup" colspan="2">Přehled žádostí za rok 2020</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1.</td>
+                <td><a href="/docs/zadost-o-poskytnuti-informaci-kamerovy-system.pdf" target="_blank">Žádost o poskytnutí informací ke kamerovému systému</a></td>
+              </tr>
+            </tbody>
           </table>
         </li>
         <li>
@@ -107,9 +109,9 @@
         <li>
           <span class="documents__info--list-heading">Opravné prostředky</span>
           <p>Opravný prostředek proti rozhodnutí Mateřské školy lze podat pouze písemně na adresu:</p>
-          <p>Mateřská škola, Praha 10, Parmská 388 <br />
+          <address>Mateřská škola, Praha 10, Parmská 388 <br />
             Parmská 388 <br />
-            109 00 Praha 10 </p>
+            109 00 Praha 10 </address>
           <p>nebo datovou schránkou.</p>
           <p>V odvolání musí být uvedeno jméno a adresa žadatele, jednací číslo rozhodnutí a proti čemu se žadatel odvolává.</p>
           <p>Lhůta pro podání opravného prostředku je uvedena v poučení příslušného rozhodnutí.</p>
