--- a/_includes/layouts/interior.njk
+++ b/_includes/layouts/interior.njk
@@ -8,6 +8,8 @@
     <iframe src="https://www.msparmska.cz/wp-content/panorama/index.html" frameborder="0" height="550" width="100%" title="MS Parmska panorama"></iframe>
   </section>
 
+  <!-- zatím jen odkaz na současnou stránku -->
+
 </main>
 
 {% include "partials/footer.njk" %}
