--- a/_includes/layouts/svp.njk
+++ b/_includes/layouts/svp.njk
@@ -5,20 +5,20 @@
 
   <section class="svp">
     <h1>Školní vzdělávací program</h1>
-    <table class="svp__table">
-      <thead>
+    <table class="table table-bordered svp__table"> <!-- table-hover -->
+      <thead class=""> <!-- thead-light -->
         <tr>
           <th></th>
-          <th scope="row">Hlavní téma</th>
-          <th scope="row">1. týden</th>
-          <th scope="row">2. týden</th>
-          <th scope="row">3. týden</th>
-          <th scope="row">4. týden</th>
+          <th scope="col">Hlavní téma</th>
+          <th scope="col">1. týden</th>
+          <th scope="col">2. týden</th>
+          <th scope="col">3. týden</th>
+          <th scope="col">4. týden</th>
         </tr>
       </thead>
       <tbody>
         <tr>
-          <th scope="col">Září</th>
+          <th scope="row">Září</th>
           <td>Škola na nás volá</td>
           <td>Kdo všechno přišel do školky?</td>
           <td>Mám kamarády?</td>
@@ -26,7 +26,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Říjen</th>
+          <th scope="row">Říjen</th>
           <td>Sklízíme plody podzimu</td>
           <td>Na poli</td>
           <td>Na zahradě</td>
@@ -34,7 +34,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Listopad</th>
+          <th scope="row">Listopad</th>
           <td>Když padá listí</td>
           <td>Co umí vítr a déšť?</td>
           <td>Moje tělo a zdraví</td>
@@ -42,7 +42,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Prosinec</th>
+          <th scope="row">Prosinec</th>
           <td>Těšíme se na Ježíška</td>
           <td>U nás doma s Mikulášem</td>
           <td>Jdeme z pohádky do pohádky</td>
@@ -50,7 +50,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Leden</th>
+          <th scope="row">Leden</th>
           <td>Zimní hry a sporty</td>
           <td>Paní zima jede</td>
           <td>Půjdu k zápisu</td>
@@ -58,7 +58,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Únor</th>
+          <th scope="row">Únor</th>
           <td>Objevujeme svět kolem nás</td>
           <td>Hádej, čím jsem</td>
           <td>Co děláme celý den a celý rok?</td>
@@ -66,7 +66,7 @@
           <td>Řeky a moře</td>
         </tr>
         <tr>
-          <th scope="col">Březen</th>
+          <th scope="row">Březen</th>
           <td>Jak se rodí jaro</td>
           <td>Jaro v trávě</td>
           <td>Když jaro ťuká</td>
@@ -74,7 +74,7 @@
           <td>Svátky jara</td>
         </tr>
         <tr>
-          <th scope="col">Duben</th>
+          <th scope="row">Duben</th>
           <td>Moje zvířátko – kde má domov?</td>
           <td>Poznáváme domácí zvířata a jejich mláďata</td>
           <td>Kdo žije u potoků, řek a rybníků?</td>
@@ -82,7 +82,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Květen</th>
+          <th scope="row">Květen</th>
           <td>Když všechno kvete</td>
           <td>Máme se rádi s mámou a tátou</td>
           <td>Naše maminka má svátek</td>
@@ -90,7 +90,7 @@
           <td>Opakování všech témat</td>
         </tr>
         <tr>
-          <th scope="col">Červen</th>
+          <th scope="row">Červen</th>
           <td>Co už umím?</td>
           <td>Jak oslavujeme svátek dětí?</td>
           <td>Kniha je studnice moudrosti</td>
