--- a/_includes/partials/locked.njk
+++ b/_includes/partials/locked.njk
@@ -3,7 +3,7 @@
   <p>Obsah je chráněn. Pokud jej chcete zobrazit, zadejte prosím heslo.</p>
   <form id="password-form">
     <div class="password">
-      <input id="password-input" class="password-input" type="password">
+      <input id="password-input" class="password-input" type="password" required>
       <img id="password-visible" class="password-visible" src="/images/eye-open.svg" alt="">
     </div>
     <button id= "password-button" class="password-button" type="submit">Odemknout</button>
