--- a/_includes/partials/nav.njk
+++ b/_includes/partials/nav.njk
@@ -3,7 +3,7 @@
     <li><a class="nav__link" href="/aktuality">Aktuality</a></li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--kindergarten" href="/o-skolce/koncepce">O školce</a>
-      <ul class="sub-nav dn" id="sub-nav--kindergarten">
+      <ul class="sub-nav" id="sub-nav--kindergarten">
         <li><a class="sub-nav__link" href="/o-skolce/koncepce">Koncepce školky</a></li>
         <li><a class="sub-nav__link" href="/o-skolce/zajmy">Zájmové zaměření</a></li>
         <li><a class="sub-nav__link" href="/o-skolce/vnitrek">Jak to u nás vypadá</a></li>
@@ -14,7 +14,7 @@
     </li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--parents" href="/pro-rodice/zapis">Pro rodiče</a>
-      <ul class="sub-nav dn" id="sub-nav--parents">
+      <ul class="sub-nav" id="sub-nav--parents">
         <li><a class="sub-nav__link" href="/pro-rodice/zapis">Zápis</a></li>
         <li><a class="sub-nav__link" href="/pro-rodice/obleceni">Oblečení do MŠ</a></li>
         <li><a class="sub-nav__link" href="/pro-rodice/rady">Rady rodičům</a></li>
@@ -25,7 +25,7 @@
     <li><a class="nav__link" href="/jidelnicek">Jídelníček</a></li>
     <li class="nav__item">
       <a class="nav__link" id="nav__link--classes" href="/tridy">Třídy</a>
-      <ul class="sub-nav dn" id="sub-nav--classes">
+      <ul class="sub-nav" id="sub-nav--classes">
         <li><a class="sub-nav__link" href="/tridy/broucci">Broučci</a></li>
         <li><a class="sub-nav__link" href="/tridy/cvrcek">Cvrček</a></li>
         <li><a class="sub-nav__link" href="/tridy/krtecek">Krteček</a></li>
