--- a/_includes/partials/footer.njk
+++ b/_includes/partials/footer.njk
@@ -1,4 +1,6 @@
-  <footer class="footer">
-    <small class="copyright">&copy; 2021 RuzeMeziTrny</small>
-  </footer>
-</div>
+<footer class="footer">
+  <small class="attribution">
+    Icons made by <a class="attribution__link" href="https://www.freepik.com" title="Freepik">Freepik</a> from <a class="attribution__link" href="https://www.flaticon.com/"; title="Flaticon">www.flaticon.com</a>
+  </small>
+  <small class="copyright">&copy; 2021 RuzeMeziTrny</small>
+</footer>
