--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -5,30 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>{{ title }}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-  <div id="app">
-    <header class="header">
-      <a class="logo-link" href="/index.html">
-        <img class="logo" src="/images/logo.png" alt="logo">
-      </a>
-      <div class="char-img">
-        <a href="/tridy/broucci"><img src="/images/broucci.jpg" alt="brouček"></a>
-        <a href="/tridy/cvrcek"><img src="/images/cvrcek.jpg" alt="cvrček"></a>
-        <a href="/tridy/krtecek"><img src="/images/krtecek.jpg" alt="krteček"></a>
-        <a href="/tridy/makova-panenka"><img src="/images/makova-panenka.jpg" alt="maková panenka"></a>
-        <a href="/tridy/rakosnicek"><img src="/images/rakosnicek.jpg" alt="rákosníček"></a>
+  <header class="header">
+    <a class="logo-link" href="/index.html">
+      <img class="logo" src="/images/logo.png" alt="logo">
+    </a>
+    <div class="char-img"> <!-- zatím pro ilustraci použity obrázky s autorskými právy, pak nahradit! -->
+      <a href="/tridy/broucci"><img src="/images/broucci.jpg" alt="Broučci"></a>
+      <a href="/tridy/cvrcek"><img src="/images/cvrcek.jpg" alt="Cvrček"></a>
+      <a href="/tridy/krtecek"><img src="/images/krtecek.jpg" alt="Krteček"></a>
+      <a href="/tridy/makova-panenka"><img src="/images/makova-panenka.jpg" alt="Maková panenka"></a>
+      <a href="/tridy/rakosnicek"><img src="/images/rakosnicek.jpg" alt="Rákosníček"></a>
+    </div>
+    <div class="contact-details">
+      <div>
+        <img class="icon" src="/images/email.svg">
+        <a class="contact-details__email" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
       </div>
-      <div class="contact-details">
-        <div>
-          <img class="contact-details__icon" src="/images/email.svg">
-          <a class="contact-details__email" href="mailto:msparmska@seznam.cz">msparmska@seznam.cz</a>
-        </div>
-        <div>
-          <img class="contact-details__icon" src="/images/address.svg">
-          <p class="contact-details__address">Parmská 388, Praha 10</p> 
-          <!-- při kliknutí na adresu modal okno s mapou? + cursor: pointer -->
-        </div>
+      <div>
+        <img class="icon" src="/images/address.svg">
+        <p class="contact-details__address">Parmská 388, Praha 10</p> 
+        <!-- při kliknutí na adresu modal okno s mapou? + cursor: pointer -->
       </div>
-    </header>
+    </div>
+  </header>
