--- a/css/_about-school.scss
+++ b/css/_about-school.scss
@@ -1,8 +1,10 @@
+/* ---------- styles for section O školce - Zájmové zaměření ---------- */
+
 .interests {
+  text-align: justify;
 
   &__image {
-    border-radius: 4px;
-    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+    @include shadow-box;
     
     &--left {
       width: 32%;
@@ -26,78 +28,43 @@
 
       &:hover {
         transform: scale(1.1);
-        // vyřešit, že se element zvětšuje směrem dolů
       }
     }
   }
 }
+
+/* ---------- styles for section O školce - Režim dne ---------- */
 
 .day-mode {
-
-  &__section {
-    margin-top: 2em;
-  }
-
-  &__table th {
-    width: 120px;
-    text-align: center;
-    vertical-align: top;
-  }
-
-  &__list {
-    margin-top: 0;
+  &__table {
+    th {
+      min-width: 120px;
+      text-align: center;
+    }
+  
+    tr:hover {
+      background-color: $color-primary-light;
+    }
   }
 }
 
+/* ---------- styles for section O školce - Školní vzdělávací program ---------- */
+
 .svp {
-
-  &__table {
+   &__table {
     margin-bottom: 2em;
+    text-align: center;
 
-    th, 
-    td {
-      border: 1px solid $color-dark;
-      padding: 0.5em;
-      text-align: center;
-      width: 16%;
-      height: 64px;
+    thead {
+      background-color: $color-primary-light;
     }
 
-    tbody {
-      tr:nth-child(1) {
-        background-color: $color-primary-light;
-      }
-      tr:nth-child(2) {
-        background-color: hsl(30, 70%, 40%);
-        color: $color-light;
-      }
-      tr:nth-child(3) {
-        background-color: hsl(30, 70%, 25%);
-        color: $color-light;
-      }
-      tr:nth-child(4) {
-        background-color: hsl(210, 70%, 25%);
-        color: $color-light;
-      }
-      tr:nth-child(5) {
-        background-color: hsl(210, 70%, 40%);
-        color: $color-light;
-      }
-      tr:nth-child(6) {
-        background-color: hsl(210, 70%, 60%);
-      }
-      tr:nth-child(7) {
-        background-color: hsl(180, 70%, 70%);
-      }
-      tr:nth-child(8) {
-        background-color: hsl(90, 70%, 70%);
-      }
-      tr:nth-child(9) {
-        background-color: hsl(60, 100%, 75%);
-      }
-      tr:nth-child(10) {
-        background-color: $color-primary-light;
-      }
+    tbody tr:nth-child(2n) {
+      background-color: hsl(30, 100%, 90%);
+    }
+
+    th {
+      width: 16%;
     }
   }
 
@@ -107,7 +74,7 @@
   }
 }
 
-/* nejsou ty barvy moc bláznivé? */
+/* ---------- styles for section O školce - Úřední dokumenty ---------- */
 
 .documents {
   display: grid;
@@ -125,10 +92,7 @@
   &__gdpr,
   &__info {
     @include shadow-box;
-  }
-
-  &__reports {
-    grid-column: 1 / 2;
+    padding: 0 1em;
   }
 
   &__gdpr {
@@ -139,41 +103,33 @@
   &__info {
     grid-column: 1 / 3;
     
-    ol {
-      list-style-type: none;
-      counter-reset: docinfo;
-    }
-
     &--list {
       padding: 0;
     }
 
-    li {
-      margin: 1em 0;
+    ol {
+      list-style-type: none;
+      counter-reset: docinfo;
     }
 
     li::before {
       counter-increment: docinfo;
       content: counters(docinfo, ".") ". ";
       font-family: $font-headings;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 700;
       color: $color-dark;
     }
 
     &--list-heading {
       font-family: $font-headings;
-      font-size: 1.1em;
+      font-size: 1.2em;
       font-weight: 700;
       color: $color-dark;
     }
-
-    table,
-    td {
-      border: 1px solid $color-dark;
-      border-collapse: collapse;
-      padding: 0.5em;
-      height: 40px;
-    }
   }
+}
+
+address {
+  font-style: normal;
 }
