--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -1,3 +1,5 @@
+/* ---------- styles for section Třídy ---------- */
+
 .classes {
   &__links {
     display: flex;
@@ -6,31 +8,40 @@
 
   a {
     @include shadow-box;
+    text-decoration: none;
   }
 
   &__images {
     width: 100%;
+    padding: 1em;
   }
 
   &__names {
     color: $color-dark;
     font-weight: 600;
     text-transform: uppercase;
-    text-decoration: none; // nefunguje -> zjistit proč
     text-align: center;
+    padding: 1em;
   }
 }
+
+/* ---------- styles for section Třídy - Broučci, Cvrček, Krteček, Maková panenka, Rákosníček ---------- */
 
 .class {
   &__heading {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
+    margin-bottom: 1em;
+
+    h1 {
+      margin: 0;
+    }
   }
 
   &__image {
     width: 60px;
-    margin: 0.5em;
+    margin-right: 0.5em;
   }
 
   &__content {
@@ -47,7 +58,6 @@
       grid-column: 2;
       grid-row: 1;
       border-left: 1px solid grey;
-      text-align: left;
     }
   }
 
@@ -58,7 +68,6 @@
 
 .password {
   display: flex;
-  align-items: center;
 
   &-input {
     padding: 0.5em;
@@ -76,8 +85,7 @@
     margin: 1em 0;
     background-color: $color-primary-light;
     border: none;
-    border-radius: 4px;
-    box-shadow: 2px 2px 4px 2px rgba(0, 0, 0, 0.1);
+    @include shadow-box;
     cursor: pointer;
 
     &:hover {
