--- a/css/_contact.scss
+++ b/css/_contact.scss
@@ -1,22 +1,24 @@
+/* ---------- styles for section Kontakty ---------- */
+
 .contact {
   text-align: center;
 
   &__container {
     display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 3em;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__staff {
+    margin: 2em;
   }
 
   &__class {
-    width: 180px;
-    border-radius: 4px;
-    box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+    flex-basis: 16%;
+    min-width: 200px;
+    @include shadow-box;
     padding: 0.5em;
-  }
-
-  &__icon {
-    width: 24px;
-    transform: translateY(8px);
+    margin: 1em;
   }
 
   &__link {
@@ -24,22 +26,18 @@
   }
 
   &__image {
-    height: 100px;
+    width: 100px;
     display: block;
-    margin: 0.5em auto;
+    margin: 1em auto;
   }
 
   &__sub-heading {
-    margin-bottom: 0;
+    margin: 1em 0 0.5em 0;
     font-weight: 600;
   }
 
-  &__staff {
+  &__employee {
     margin: 0;
-  }
-
-  iframe {
-    padding: 1em 0;
   }
 }
 
