--- a/css/_main-page.scss
+++ b/css/_main-page.scss
@@ -1,21 +1,19 @@
-.main {
-  padding: 1em 2em;
-  text-align: justify;
-  line-height: 1.5;
-  min-height: 70vh; // x u větších obrazovek je to málo
-}
+/* ---------- styles for main page ---------- */
 
-.about-us__image {
-  float: right;
-  width: 20%;
-  margin-left: 1em;
-  border-radius: 4px;
-  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.1);
+.about-us {
+  text-align: justify;
+  
+  &__image {
+    float: right;
+    width: 20%;
+    margin-left: 1em;
+    @include shadow-box;
+  }
 }
 
 .news-meal {
   display: flex;
-  padding-top: 2em;
+  padding-top: 1em;
 
   section {
     flex-basis: 50%;
@@ -23,22 +21,11 @@
     grid-template-columns: 24px repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr );
     grid-gap: 0.5em;
-    //justify-items: center; (dokud není obsah, pak odkomentovat)
     align-items: center;
-  }
-
-  &__icon-link {
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
-  }
-  
-  &__icon {
-    width: 24px;
   }
 
   &__heading {
     grid-column: 2 / 5;
-    grid-row: 1 / 2;
     justify-self: start;
     margin: 0;
   }
@@ -46,6 +33,5 @@
   &__link {
     grid-column: 1 / 5;
     grid-row: 3 / 4;
-    //font-weight: 600;
   }
 }
