--- a/css/styles.scss
+++ b/css/styles.scss
@@ -12,43 +12,64 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Roboto+Condensed:wght@400;700&display=swap');
 
+/* ---------- styles for all pages ---------- */
+
 html { box-sizing: border-box; }
 *, :after, :before { box-sizing: inherit; }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 120px auto 1fr auto;
   font-family: $font-text;
   color: $color-dark;
+}
+
+.main {
+  padding: 2em;
+  line-height: 1.5;
 }
 
 /* ---------- generic styles for headings ---------- */
 
 h1 {
   font-family: $font-headings;
-  font-size: 1.5em;
+  font-size: 2rem;
   color: $color-primary;
   text-align: center;
 }
 
 h2 {
   font-family: $font-headings;
-  font-size: 1.3em;
+  font-size: 1.6rem;
   color: $color-primary;
+  margin: 1em 0 0.5em 0;
 }
 
 h3 {
   font-family: $font-headings;
-  font-size: 1.1em;
+  font-size: 1.2em;
   color: $color-dark;
-  margin-bottom: 0;
 }
 
 /* ---------- generic styles for links ---------- */
 
 a {
   color: $color-primary;
+  text-decoration: underline;
 
   &:hover {
     color: $color-primary-dark;
   }
+}
+
+/* ---------- generic styles for icons ---------- */
+
+.icon {
+  width: 24px;
 }
