MP class - activity images in carousel in modal

--- a/_includes/layouts/makova-panenka.njk
+++ b/_includes/layouts/makova-panenka.njk
@@ -12,6 +12,7 @@
     <div class="class__content">
       {{ content | safe }}
       {% include "partials/locked.njk" %}
+      {% include "partials/modal-gallery-MP.njk" %}
     </div>
 
   </section>
