--- a/css/_classes.scss
+++ b/css/_classes.scss
@@ -49,20 +49,69 @@
     grid-template-columns: 60% 36%;
     grid-gap: 2em;
 
+    &--new {
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+
     &--old {
       grid-column: 1 / 3;
     }
 
     &--aside {
+      grid-column: 2 / 3;
+      grid-row: 1 / 2;
       padding-left: 2em;
-      grid-column: 2;
-      grid-row: 1;
       border-left: 1px solid grey;
     }
   }
 
   &__iframe-yt {
     max-width: 750px;
+  }
+
+  &__gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-gap: 1em;
+    cursor: pointer;
+
+    &-item {
+      overflow: hidden;
+      height: 200px;
+      object-fit: cover;
+    }
+  }
+
+  &__activity {
+    width: 100%;
+    @include shadow-box;
+    transition: transform 0.3s;
+
+      &:hover {
+        transform: scale(1.1);
+      }
+  }
+}
+
+.modal-content {
+  height: 92vh;
+}
+
+.carousel {
+  &-inner {
+    img {
+      height: 78vh;
+      object-fit: contain;
+    }
+  }
+
+  &-control-prev-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e6e6e6' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+  }
+
+  &-control-next-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e6e6e6' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
   }
 }
 
