--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ nav {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 1;
 }
 
 .nav {
@@ -560,6 +561,15 @@ address {
   grid-gap: 2em;
 }
 
+.class__content--new {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+}
+
 .class__content--old {
   -ms-grid-column: 1;
   -ms-grid-column-span: 2;
@@ -567,16 +577,68 @@ address {
 }
 
 .class__content--aside {
-  padding-left: 2em;
   -ms-grid-column: 2;
-  grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
   -ms-grid-row: 1;
-  grid-row: 1;
+  -ms-grid-row-span: 1;
+  grid-row: 1 / 2;
+  padding-left: 2em;
   border-left: 1px solid grey;
 }
 
 .class__iframe-yt {
   max-width: 750px;
+}
+
+.class__gallery {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(200px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 1em;
+  cursor: pointer;
+}
+
+.class__gallery-item {
+  overflow: hidden;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.class__activity {
+  width: 100%;
+  border-radius: 4px;
+  -webkit-box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+          box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.1);
+  -webkit-transition: -webkit-transform 0.3s;
+  transition: -webkit-transform 0.3s;
+  transition: transform 0.3s;
+  transition: transform 0.3s, -webkit-transform 0.3s;
+}
+
+.class__activity:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.modal-content {
+  height: 92vh;
+}
+
+.carousel-inner img {
+  height: 78vh;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e6e6e6' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M5.25 0l-4 4 4 4 1.5-1.5L4.25 4l2.5-2.5L5.25 0z'/%3e%3c/svg%3e");
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23e6e6e6' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath d='M2.75 0l-1.5 1.5L3.75 4l-2.5 2.5L2.75 8l4-4-4-4z'/%3e%3c/svg%3e");
 }
 
 .password {
